<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center"
            android:layout_width="100dp" android:layout_height="100dp"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:src="@drawable/ic_app_icon" android:layout_marginStart="@dimen/dimen_5dp"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:textColor="@android:color/black"
            android:gravity="left" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:text="@string/title_rate"/>
        <TextView android:textSize="16sp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:textColor="@android:color/black"
            android:gravity="left" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_5dp" android:layout_marginRight="@dimen/dimen_5dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:text="@string/content_rate"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="23dp">
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp">

            <ImageView
                android:id="@+id/iv_start_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_6dp"
                android:layout_marginLeft="@dimen/dimen_6dp"
                android:src="@drawable/ic_star_false" />

            <ImageView android:id="@+id/iv_start_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_6dp" android:src="@drawable/ic_star_false" android:layout_marginStart="@dimen/dimen_6dp"/>
            <ImageView android:id="@+id/iv_start_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_6dp" android:src="@drawable/ic_star_false" android:layout_marginStart="@dimen/dimen_6dp"/>
            <ImageView android:id="@+id/iv_start_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_6dp" android:src="@drawable/ic_star_false" android:layout_marginStart="@dimen/dimen_6dp"/>
            <ImageView android:id="@+id/iv_start_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_5dp" android:src="@drawable/ic_star_false" android:layout_marginStart="@dimen/dimen_5dp"/>
        </LinearLayout>
        <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="4dp"
            android:gravity="center"
            android:id="@+id/btn_ask"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"
            android:textColor="@color/colorwhite"
            android:layout_marginRight="10dp"
            android:text="@string/ask_me"
            android:background="@drawable/back_color"
            android:textSize="12sp" />

        <TextView
            android:gravity="center"
            android:padding="4dp"
            android:id="@+id/btn_remid"
            android:textSize="12sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/colorwhite"
            android:background="@drawable/back_color"
            android:layout_height="30dp"
            android:text="@string/remind_later"
            />
    </LinearLayout>
</LinearLayout>
