<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
  >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"/>
        <TextView
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/about_us"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_marginTop="@dimen/dimen_24dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_96"></ImageView>
    <TextView
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"></TextView>
    <TextView
        android:id="@+id/tv_version"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="">
    </TextView>
    <LinearLayout
        android:layout_marginTop="@dimen/dimen_24dp"
        android:id="@+id/ll_rate_5stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#FDBE00"
            android:src="@drawable/ic_star_face_white_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#FDBE00"
            android:src="@drawable/ic_star_face_white_24dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#FDBE00"
            android:src="@drawable/ic_star_face_white_24dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#FDBE00"
            android:src="@drawable/ic_star_face_white_24dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:tint="#FDBE00"
            android:src="@drawable/ic_star_face_white_24dp" />
    </LinearLayout>
    <TextView
        android:textColor="#4CAF50"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/rate_app"
        android:textSize="@dimen/text_12sp" />
    <androidx.cardview.widget.CardView
        android:layout_marginTop="@dimen/dimen_16dp"
        android:id="@+id/card_view_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_8dp"
        android:layout_marginRight="@dimen/dimen_8dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_invite_friends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/oval_about_us"
                    android:padding="@dimen/dimen_8dp"
                    android:src="@drawable/ic_share_white_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/share_app"
                    android:textSize="@dimen/text_12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/oval_about_us"
                    android:padding="@dimen/dimen_8dp"
                    android:src="@drawable/ic_email_white_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/feed_back"
                    android:textSize="@dimen/text_12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about_us"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/oval_about_us"
                    android:padding="@dimen/dimen_8dp"
                    android:src="@drawable/ic_information_variant_white_24dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/about_us"
                    android:textSize="@dimen/text_12sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:id="@+id/tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"></TextView>
</LinearLayout>